--- a/resume.html
+++ b/resume.html
@@ -19,10 +19,12 @@
     </header>
 
   <nav>
+    <ul>
       <li><a href="#education">Education</a></li>
       <li><a href="#career">Career Related Experience</a></li>
       <li><a href="#writing">Writing and Work Experience</a></li>
       <li><a href="#experiences">Experiences and interests</a></li>
+    </ul>
   </nav>
 
   <main>
@@ -30,8 +32,7 @@
   <section id="education">
     <h2>Education</h2>
       <article>
-        <h3><a href="http://www.miami.edu">University of Miami </a></h3>
-        <h4>(2013-present)</h4>
+        <h3><a href="http://www.miami.edu">University of Miami (2013-present)</a></h3>
         <ul>
         <li>Major in Journalism</li>
         <li>Double minor in public relations and creative writing</li>
