finalized style sheet and created print document

--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Caroline Pilosof Resume</title>
-    <link href="css/stylesheet.css"
-      rel="stylesheet" />
-
+    <link href="css/stylesheet.css" rel="stylesheet" />
+    <link href="css/print.css" media="print" rel="stylesheet"/>
   </head>
 
   <body>
@@ -140,5 +139,5 @@
   </div>
 
   </body>
-</div>
+
 </html>
