added pages and created portfolio

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
-<DOCTYPE html>
-<html>
+<!DOCTYPE html>
+  <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Kit's page</title>
+    <title>Kit Pilosof</title>
+    <link href="css/stylesheet.css" rel="stylesheet" />
+    <link href="css/mobile.css" rel="mobile" />
+  </head>
 
-    </head>
+  <body>
 
-    <body>
-      <h1>Hi!</h1>
-    </body>
+    <div id="container">
+      <h1><a href="index.html">Kit Pilosof</a></h1>
 
-    </html>
+      <nav>
+        <ul>
+          <li><a href="aboutme.html">About me</a></li>
+          <li><a href="resume.html">Resume</a></li>
+          <li><a href="work.html">Work</a></li>
+        </ul>
+      </nav>
+
+
+      <img src="img/profil-pic.jpg" alt="Profile" />
+
+
+
+    </div>
+
+  </body>
+
+  </html>
