--- a/resume.html
+++ b/resume.html
@@ -10,25 +10,15 @@
   <body>
     <div id="container">
     <header>
-        <h1>Caroline Pilosof</h1>
+        <h1><a href="index.html">Kit Pilosof</a></h1>
       <address>
         <p><em>pilosofkit@gmail.com</em></p>
         <p>(786) 448-5652</p>
       </address>
     </header>
 
-  <nav>
-    <ul>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#career">Career Related Experience</a></li>
-      <li><a href="#writing">Writing and Work Experience</a></li>
-      <li><a href="#experiences">Experiences and interests</a></li>
-    </ul>
-  </nav>
-
   <main>
 
-  <section id="education">
     <h2>Education</h2>
       <article>
         <h3><a href="http://www.miami.edu">University of Miami (2013-present)</a></h3>
@@ -48,14 +38,13 @@
 
   <article>
     <h3><a href="http://www.canadiancollegeitaly.com/">Canadian College Italy (July 2012)</a></h3>
-
       <ul>
       <li>Earned a classical civilization credit while visiting Italy’s major cities</li>
       </ul>
   </article>
-    </section>
 
-  <section id="career">
+    <section>
+
     <h2>Career Related Experience</h2>
     <article>
       <h3>Mayor, John Tory, Campaign Team (May-August 2014) </h3>
@@ -84,9 +73,11 @@
       <li> <a href="http://www.holtrenfrew.com/">Holt Renfrew</a></li>
       </ul>
   </article>
-</section>
 
-  <section id="writing">
+    </section>
+
+    <section>
+
     <h2>Writing and Work Experience</h2>
   <article>
     <h3>Distraction Magazine (October 2013-Present)</h3>
@@ -110,9 +101,11 @@
       <li>Wrote articles for Greenwood College School's Newspaper</li>
       </ul>
   </article>
-</section>
 
-  <section id="experiences">
+    </section>
+
+    <section>
+
     <h2>Experiences and Interests</h2>
   <article>
     <h3>Kenya (July 2010)</h3>
@@ -128,7 +121,8 @@
       <li>Fashion design and sewing classes learning to construct patterns and make clothing</li>
       </ul>
   </article>
-</section>
+
+  </section>
 
   </main>
 
