changes to work page and picture

--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
     </nav>
 
 
-    <a href="layout.html"><img src="img/kitslayouts.jpg" alt="Layouts"></a>
+    <a href="layout.html"><img src="img/Kitslayouts.jpg" alt="Layouts"></a>
     <a href="written.html"><img src="img/kitswrittenwork.jpg" alt="Written"></a>
 
   </div>
