changes to stylesheets and html pages

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>About Me</title>
   <link href="css/stylesheet.css" rel="stylesheet" />
+  <link href="css/mobile.css" media="screen" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width; initial-scale=1;" />
 </head>
 
 
@@ -18,7 +20,6 @@
         <li><a href="work.html">Work</a></li>
       </ul>
     </nav>
-
 
     <p>Majoring in print journalism and double minoring in public relations and creative writing at the
 University of Miami, I have a great interest in writing, delivering news and sharing my perspective.
