--- a/work.html
+++ b/work.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>About Me</title>
   <link href="css/stylesheet.css" rel="stylesheet" />
+  <link href="css/mobile.css" media="screen" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width; initial-scale=1;" />
 </head>
 
 <body>
@@ -19,8 +21,8 @@
     </nav>
 
 
-    <a href="layout.html"><img src="img/Kitslayouts.jpg" alt="Layouts"></a>
-    <a href="written.html"><img src="img/kitswrittenwork.jpg" alt="Written"></a>
+    <a href="layout.html"><img class="layoutpic" src="img/Kitslayouts.jpg" alt="Layouts"></a>
+    <a href="written.html"><img class="writtenpic" src="img/kitswrittenwork.jpg" alt="Written"></a>
 
   </div>
 
