--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Kit Pilosof</title>
-    <link href="css/stylesheet.css" rel="stylesheet" />
-    <link href="css/mobile.css" rel="mobile" />
+    <link href="css/stylesheet.css" media="screen" rel="stylesheet" />
+    <link href="css/mobile.css" media="screen" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width; initial-scale=1;" />
   </head>
 
   <body>
@@ -21,8 +22,7 @@
       </nav>
 
 
-      <img src="img/profil-pic.jpg" alt="Profile" />
-
+      <img class="home" src="img/profil-pic.jpg" alt="Profile" />
 
 
     </div>
