--- a/layout.html
+++ b/layout.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>About Me</title>
-  <link href="css/stylesheet.css" rel="stylesheet" />
+  <link href="css/stylesheet.css" media="screen" rel="stylesheet" />
+  <link href="css/mobile.css" media="screen" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width; initial-scale=1;" />
 </head>
 
-<body>
+<body id="layout">
   <div id="container">
     <h1><a href="index.html">Kit Pilosof</a></h1>
 
