--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Caroline Pilosof Resume</title>
-    <link href="css/stylesheet.css" rel="stylesheet" />
+    <link href="css/stylesheet.css" media="screen" rel="stylesheet" />
     <link href="css/print.css" media="print" rel="stylesheet"/>
+    <link href="css/mobile.css" media="screen" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width; initial-scale=1;" />
+
   </head>
 
   <body>
