--- a/written.html
+++ b/written.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>About Me</title>
-  <link href="css/stylesheet.css" rel="stylesheet" />
+  <link href="css/stylesheet.css" media="screen" rel="stylesheet" />
+  <link href="css/mobile.css" media="screen" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width; initial-scale=1;" />
 </head>
 
 <body>
