html tags added

--- a/aboutme.html
+++ b/aboutme.html
@@ -37,6 +37,8 @@ feature writing, effective interviewing and news releases, backgrounders and fac
 the sum of these opportunities makes me a personable and highly reliable worker.</p>
 
 
-</div>
+  </div>
 
 </body>
+
+</html>
